# project-public-mirror

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
alembic/: env.py  script.py.mako
alembic/versions/: 20241006_add_check_entities.py
chat_context/: 000_manifest.md  001_project_overview.md  002_architecture.md  002_domain_entities.md  003_current_tasks.md  003_data_sources_overview.md  004_architecture_overview.md  004_decisions_log.md  005_backlog.md  005_risk_model_principles.md  006_background_jobs_and_reuse.md  006_tech_stack.md  007_report_structure.md  008_coding_style.md
src/checks/adapters/: address_resolver_stub.py  signals_provider_stub.py
src/checks/adapters/signal_sources/: address_confidence_signal_source.py  keyword_signal_source.py
src/checks/api/routes/: check.py
src/checks/application/: signals_pipeline.py
src/checks/application/exceptions/: common.py
src/checks/application/helpers/: url_extraction.py
src/checks/application/kad_arbitr/: __init__.py  kad_arbitr_signal_builder.py
src/checks/application/ports/: checks.py  fias_client.py  signal_sources.py
src/checks/application/use_cases/: address_risk_check.py  check_address.py  check_address_cache.py  check_address_flow.py  check_address_listing.py  check_address_payloads.py  check_address_results.py  check_address_signals.py  check_address_sources.py  check_kad_arbitr_for_house.py
src/checks/domain/constants/: address.py
src/checks/domain/entities/: check.py  check_cache.py  check_result.py
src/checks/domain/exceptions/: address.py  domain.py
src/checks/domain/helpers/: address_heuristics.py  dt.py  idempotency.py
src/checks/domain/value_objects/: address.py  query.py  url.py
src/checks/infrastructure/: address_resolver_factory.py  address_resolver_fias.py  check_cache_repo_db.py  check_cache_repo_inmemory.py  check_results_repo_db.py  check_results_repo_inmemory.py  gis_gkh_resolver_container.py  listing_resolver_container.py  listing_resolver_factory.py  rosreestr_resolver_container.py
src/checks/infrastructure/fias/: __init__.py  client.py  client_stub.py  dto.py  errors.py
src/mirano.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/reports/api/: routes.py  schemas.py
src/reports/application/ports/: repos.py
src/reports/application/services/: check_payload_reader.py  module_access_policy.py  payments_stub.py  report_assembler.py
src/reports/application/use_cases/: create_report.py  get_report.py
src/reports/domain/constants/: __init__.py
src/reports/domain/entities/: report.py
src/reports/domain/exceptions/: report.py
src/reports/domain/modules/: catalog.py  (+2 more)
src/reports/infrastructure/: reports_repo_db.py  reports_repo_inmemory.py
src/risks/application/: scoring.py
src/risks/domain/: signals_catalog.py
src/shared/kernel/: bootstrap.py  db.py  db_base.py  fias_client_factory.py  gis_gkh_client_factory.py  kad_arbitr_client_factory.py  logging.py  repositories.py  rosreestr_client_factory.py  settings.py
src/sources/gis_gkh/: __init__.py  consts.py  container.py  exceptions.py  models.py  playwright_client.py  ports.py  signals.py  stub_client.py
src/sources/kad_arbitr/: __init__.py  acts_parser.py  acts_selector.py  amounts_extractor.py  cache.py  card_parser.py  claim_classifier.py  exceptions.py  mapper.py  models.py  ports.py  signals.py  stub_client.py  throttling.py  xhr_client.py
src/sources/rosreestr/: __init__.py  api_cloud_client.py  cached_client.py  container.py  dto.py  exceptions.py  mapper.py  models.py  ports.py  signals.py  stub_client.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/sources/: __init__.py
tests/integration/user_flow/: __init__.py  test_check_with_report.py
tests/unit/checks/: test_check_address_fias_payload_extended.py  test_check_address_gis_gkh_signals.py  test_check_address_rosreestr_payload.py  test_check_address_rosreestr_signals.py  test_check_address_url_avito.py  test_fias_dto_parsing.py  test_listing_resolver_container.py
tests/unit/sources/: test_avito_listing_parser.py  test_avito_preloaded_state.py  test_avito_provider.py  test_resolve_listing_from_url.py
(+160 files in other folders)
