[tool.poetry]
name = "flaffy-back"
version = "0.1.0"
description = "Flaffy — real estate risk assessment platform"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

dependencies = [
    # API
    'fastapi>=0.110',
    'uvicorn[standard]>=0.27',

    # Database
    'sqlalchemy>=2.0',
    'asyncpg>=0.29',
    'psycopg[binary]>=3.1',
    'alembic>=1.13',

    # Config & validation
    'pydantic>=2.6',
    'pydantic-settings>=2.2',
    'python-dotenv>=1.0',

    # Background jobs
    'celery>=5.4',
    'redis>=5.0',

    # HTTP & retries
    'httpx>=0.27',
    'tenacity>=8.2',

    # Serialization & logging
    'orjson>=3.10',
    'structlog>=24.1',
]

[tool.optional-dependencies]
dev = [
    'pytest>=8.0',
    'pytest-asyncio>=0.23',

    'mypy>=1.9',
    'ruff>=0.3',
    'black>=24.3',

    'types-redis',
    'types-requests',
]

[tool.black]
line-length = 80
target-version = ['py311']
skip-string-normalization = true

[tool.ruff]
line-length = 80
target-version = 'py311'
lint.select = [
    'E',
    'F',
    'I',
    'B',
    'UP',
]
lint.ignore = [
    'B008', # FastAPI Depends()
]

[tool.mypy]
python_version = '3.11'
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.hatch.build.targets.wheel]
packages = ['src']
