[tool.poetry]
name = "flaffy-back"
version = "0.1.0"
description = "Flaffy — real estate risk assessment platform"
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.110"
uvicorn = {extras = ["standard"], version = ">=0.27"}
sqlalchemy = ">=2.0"
asyncpg = ">=0.29"
psycopg = {extras = ["binary"], version = ">=3.1"}
alembic = ">=1.13"
pydantic = ">=2.6"
pydantic-settings = ">=2.2"
python-dotenv = ">=1.0"
celery = ">=5.4"
redis = ">=5.0"
httpx = ">=0.27"
tenacity = ">=8.2"
orjson = ">=3.10"
structlog = ">=24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23"
ruff = "^0.6.0"
mypy = "^1.10.0"
black = "^24.3"

[tool.black]
line-length = 80
target-version = ['py311']
skip-string-normalization = true

[tool.ruff]
line-length = 80
target-version = 'py311'
lint.select = [
    'E',
    'F',
    'I',
    'B',
    'UP',
]
lint.ignore = [
    'B008', # FastAPI Depends()
]

[tool.mypy]
python_version = '3.11'
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = 'auto'
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ['src']
